fix(TagChip): Make legible when the user wants a light color scheme

--- a/src/module/actor/custom-elements/TagChip.css
+++ b/src/module/actor/custom-elements/TagChip.css
@@ -5,6 +5,7 @@
   font-weight: 600;
   font-size: .75em;
   line-height: 1em;
+  color: var(--color-heading);
 }
 
 ::slotted(i[class*="fa-"]) {
